<resources>
    <string name="app_name">Movie-DB-App</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="edit_profile_button_text">Edit</string>
    <string name="edit_profile_top_text">Profile</string>
    <string name="full_name_text">Full Name</string>
    <string name="trending">Trending</string>
    <string name="favorites">Favorites</string>
    <string name="genres">Genres</string>
    <string name="as">as</string>
    <string name="birthday_text">Date of birth</string>
    <string name="birthday_picker">Select Date</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="here">here</string>
    <string name="rating">Rating: </string>
    <string name="cast">Cast:</string>
    <string name="movie_character_name">movie character name</string>
    <string name="real_name">real name</string>
    <string name="hint_full_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="empty_search">No results found</string>
    <string name="favorites_empty">You have no favorite movies. Try adding some to your favorites list!</string>
    <string name ="ScrollingViewBehavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>